# tira-harjoitustyo

./: .coveragerc  README.md  pyproject.toml
.github/workflows/: main.yml
dokumentaatio/: maarittelydokumentti.md
dokumentaatio/viikkoraportit/: viikkoraportti1.md  viikkoraportti2.md
src/: app.py  index.py
src/services/: evaluator.py  postfix.py
src/tests/: evaluator_test.py  postfix_test.py
