[tool.poetry]
name = "tira-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Niko Raulas <niko.raulas@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pylint = "^3.1.0"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
